ai-ml/llm-multi-cluster-gw/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: llm
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: llm-route
  namespace: llm
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: llm-service-eu
      port: 8000
      weight: 50
    - group: net.gke.io
      kind: ServiceImport
      name: llm-service-us
      port: 8000
      weight: 50
